Fix grid and spacing

--- a/_sass/_includes/_gallery.scss
+++ b/_sass/_includes/_gallery.scss
@@ -4,7 +4,11 @@
 
 // - - - - - - - - - - - - - - - - - -
 
-.gallery-flex-item {
+.gallery-flex {
+  margin-bottom: 80px;
+}
+
+.gallery-flex__item {
   width: 181px; 
   height: 181px; 
   display: inline-flex;
