--- a/_sass/_pages/_page.scss
+++ b/_sass/_pages/_page.scss
@@ -23,7 +23,7 @@
 
 .gallery-about {
 	display: grid;
-
+	margin: 60px 0;
 
 	@include mq(phonel) {
 		grid-template-columns: 1fr;
