--- a/_sass/_pages/_page__blog.scss
+++ b/_sass/_pages/_page__blog.scss
@@ -8,11 +8,12 @@
 
   .testimonial {
     margin-bottom: 30px;
+    
+    footer {
+      font-size: 28px;
+    }
   }
-  .testimonial p {
-    font-size: 16px;
-  }
-
+  
   .all-posts {
     margin-bottom: 48px;
 
